...
                        android:gravity="center"
                        android:text="@{context.getString(viewmodel.currentFilteringLabel)}"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/colorPrimary" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/images_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:images="@{viewmodel.images}"
                        android:padding="@dimen/list_item_padding"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
...
                </LinearLayout>
            </RelativeLayout>

        </blog.photo.albumbuild.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/images_add_new_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/ic_add_24dp"
            android:tint="@color/colorSecondary"
            android:tooltipText="@string/add_images"
...
